--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,18 @@ if(AFF3CT_CORE_TESTS)
     list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-chain-io)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-chain-io)
     ###=========================================================================================###
+    ###=========================================================================================###
+    #Ajout de la simple-chain-hybrid-test 
+    add_executable(aff3ct-core-test-simple-chain-hybride $<TARGET_OBJECTS:aff3ct-core-obj>
+                                                 ${CMAKE_CURRENT_SOURCE_DIR}/tests/simple_chain_hybride.cpp)
+    set_target_properties(aff3ct-core-test-simple-chain-hybride PROPERTIES
+                                                        OUTPUT_NAME test-simple-chain-hybride
+                                                        POSITION_INDEPENDENT_CODE ON) # set -fpie
+    list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-chain-hybride)
+    list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-chain-hybride)
+    ###=========================================================================================###
+
+
     add_executable(aff3ct-core-test-for-loop $<TARGET_OBJECTS:aff3ct-core-obj>
                                                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/for_loop.cpp)
     set_target_properties(aff3ct-core-test-for-loop PROPERTIES
