--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,8 +135,6 @@ if(AFF3CT_CORE_TESTS)
     list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-chain-hybride)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-chain-hybride)
     ###=========================================================================================###
-
-
     add_executable(aff3ct-core-test-for-loop $<TARGET_OBJECTS:aff3ct-core-obj>
                                                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/for_loop.cpp)
     set_target_properties(aff3ct-core-test-for-loop PROPERTIES
@@ -176,6 +174,15 @@ if(AFF3CT_CORE_TESTS)
                                                            POSITION_INDEPENDENT_CODE ON) # set -fpie
     # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline)
+    ###======================================================================================================###
+    add_executable(aff3ct-core-test-simple-pipeline_io $<TARGET_OBJECTS:aff3ct-core-obj>
+                                                    ${CMAKE_CURRENT_SOURCE_DIR}/tests/simple_pipeline_io.cpp)
+    set_target_properties(aff3ct-core-test-simple-pipeline_io PROPERTIES
+                                                           OUTPUT_NAME test-simple-pipeline_io
+                                                           POSITION_INDEPENDENT_CODE ON) # set -fpie
+    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
+    list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_io)
+    ###======================================================================================================###
 endif()
 
 # ---------------------------------------------------------------------------------------------------------------------
