--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,16 @@ if(AFF3CT_CORE_TESTS)
     # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_io)
     ###======================================================================================================###
+     add_executable(aff3ct-core-test-simple-pipeline_full_io $<TARGET_OBJECTS:aff3ct-core-obj>
+                                                    ${CMAKE_CURRENT_SOURCE_DIR}/tests/simple_pipeline_full_io.cpp)
+    set_target_properties(aff3ct-core-test-simple-pipeline_full_io PROPERTIES
+                                                           OUTPUT_NAME test-simple-pipeline_full_io
+                                                           POSITION_INDEPENDENT_CODE ON) # set -fpie
+    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
+    list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_full_io)
+    ###======================================================================================================###
+
+
 endif()
 
 # ---------------------------------------------------------------------------------------------------------------------
