--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,7 +172,6 @@ if(AFF3CT_CORE_TESTS)
     set_target_properties(aff3ct-core-test-simple-pipeline PROPERTIES
                                                            OUTPUT_NAME test-simple-pipeline
                                                            POSITION_INDEPENDENT_CODE ON) # set -fpie
-    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline)
     ###======================================================================================================###
     add_executable(aff3ct-core-test-simple-pipeline_io $<TARGET_OBJECTS:aff3ct-core-obj>
@@ -183,6 +182,17 @@ if(AFF3CT_CORE_TESTS)
     # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_io)
     ###======================================================================================================###
+    # Ajout du code pour 
+    ###======================================================================================================###
+    add_executable(aff3ct-core-test-simple-pipeline_full_io $<TARGET_OBJECTS:aff3ct-core-obj>
+                                                    ${CMAKE_CURRENT_SOURCE_DIR}/tests/simple_pipeline_full_io.cpp)
+    set_target_properties(aff3ct-core-test-simple-pipeline_full_io PROPERTIES
+                                                           OUTPUT_NAME test-simple-pipeline_full_io
+                                                           POSITION_INDEPENDENT_CODE ON) # set -fpie
+    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
+    list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_full_io)
+    ###======================================================================================================###
+
 endif()
 
 # ---------------------------------------------------------------------------------------------------------------------
