--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,48 +1,33 @@
 {
     "files.associations": {
-        "array": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "cctype": "cpp",
         "chrono": "cpp",
+        "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
-        "compare": "cpp",
-        "complex": "cpp",
-        "concepts": "cpp",
-        "condition_variable": "cpp",
         "csignal": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
-        "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "strstream": "cpp",
+        "*.tcc": "cpp",
+        "bitset": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "cstdint": "cpp",
         "deque": "cpp",
-        "map": "cpp",
-        "set": "cpp",
-        "string": "cpp",
+        "list": "cpp",
         "unordered_map": "cpp",
         "vector": "cpp",
         "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "random": "cpp",
-        "ratio": "cpp",
-        "string_view": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
         "fstream": "cpp",
+        "functional": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "iosfwd": "cpp",
@@ -51,14 +36,19 @@
         "limits": "cpp",
         "mutex": "cpp",
         "new": "cpp",
-        "numbers": "cpp",
         "ostream": "cpp",
-        "semaphore": "cpp",
+        "numeric": "cpp",
+        "ratio": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
-        "stop_token": "cpp",
         "streambuf": "cpp",
+        "system_error": "cpp",
         "thread": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp"
     },
