--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,7 +179,6 @@ if(AFF3CT_CORE_TESTS)
     set_target_properties(aff3ct-core-test-simple-pipeline_io PROPERTIES
                                                            OUTPUT_NAME test-simple-pipeline_io
                                                            POSITION_INDEPENDENT_CODE ON) # set -fpie
-    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_io)
     ###======================================================================================================###
     # Ajout du code pour pipeline_full_io
@@ -189,7 +188,6 @@ if(AFF3CT_CORE_TESTS)
     set_target_properties(aff3ct-core-test-simple-pipeline_full_io PROPERTIES
                                                            OUTPUT_NAME test-simple-pipeline_full_io
                                                            POSITION_INDEPENDENT_CODE ON) # set -fpie
-    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_full_io)
     ###======================================================================================================###
      # Ajout du code pour pipeline_multiple_stage
@@ -198,20 +196,19 @@ if(AFF3CT_CORE_TESTS)
                                                     ${CMAKE_CURRENT_SOURCE_DIR}/tests/simple_pipeline_multiple_stage_io.cpp)
     set_target_properties(aff3ct-core-test-simple-pipeline_multiple_stage PROPERTIES
                                                            OUTPUT_NAME test-simple-pipeline_multiple_stage
-                                                           POSITION_INDEPENDENT_CODE ON) # set -fpie
-    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
+                                                           POSITION_INDEPENDENT_CODE ON) # set -fpie 
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_multiple_stage)
     ###======================================================================================================###
 
      ###======================================================================================================###
-     # Ajout du code pour pipeline_multiple_stage
+     # Ajout du code pour pipeline_inter_stage
     ###======================================================================================================###
     add_executable(aff3ct-core-test-complexe-pipeline_inter_stage $<TARGET_OBJECTS:aff3ct-core-obj>
                                                     ${CMAKE_CURRENT_SOURCE_DIR}/tests/complexe_pipeline_inter_stage.cpp)
     set_target_properties(aff3ct-core-test-complexe-pipeline_inter_stage PROPERTIES
                                                            OUTPUT_NAME test-complexe-pipeline_inter_stage
                                                            POSITION_INDEPENDENT_CODE ON) # set -fpie
-    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
+    list(APPEND aff3ct_core_tests_list aff3ct-core-test-complexe-pipeline_inter_stage)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-complexe-pipeline_inter_stage)
     ###======================================================================================================###
 
@@ -223,7 +220,7 @@ if(AFF3CT_CORE_TESTS)
     set_target_properties(aff3ct-core-test-simple-pipeline_double_chain PROPERTIES
                                                            OUTPUT_NAME test-simple-pipeline_double_chain
                                                            POSITION_INDEPENDENT_CODE ON) # set -fpie
-    # list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_io)
+    list(APPEND aff3ct_core_tests_list aff3ct-core-test-simple-pipeline_double_chain)
     list(APPEND aff3ct_core_targets_list aff3ct-core-test-simple-pipeline_double_chain)
     ###======================================================================================================###
 
